route Get default dashboard
